# reno-viewer

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
api/: .env.example  Dockerfile  pyproject.toml
api/src/: auth.py  config.py  db.py  main.py  models.py  observability.py  storage.py
api/src/routers/: anchors.py  candidates.py  projects.py  snapshots.py
api/tests/: conftest.py  test_anchors.py  test_auth.py  test_projects.py
src/: App.css  App.tsx  index.css  main.tsx  theme.ts  types.test.ts  types.ts
src/api/: client.ts  index.ts
src/components/: AnchorEditModal.tsx  AnchorPoint.tsx  BudgetModal.tsx  BudgetView.tsx  CandidatePopover.tsx  CandidateViewModal.tsx  CategoriesModal.tsx  CompareView.tsx  ConfirmDialog.tsx  ExportMenu.tsx  FloorPlanCanvas.tsx  HelpModal.tsx  ItemizedSidebar.tsx  ItemsTable.tsx  Lightbox.tsx  LoginScreen.tsx  ProjectSelector.tsx  StatusBadge.tsx  ThemeToggle.tsx  Toast.tsx  UserMenu.tsx  UsersModal.tsx
src/hooks/: useEscapeKey.ts  useTheme.ts
src/utils/: budget.test.ts  budget.ts  csvExport.test.ts  csvExport.ts  exportSnapshot.ts
